- Query
 - IValuedNode contract changed to have both AsDateTime() and AsDateTimeOffset() methods (CORE-365)
- Configuration API
 - ConfiguationLoader had IConfigurationLoader interface extracted (CORE-362)
- Writing
 - Significantly improve performance of writing non-ASCII characters to NTriples (CORE-357)

Removed
- Marked as obsolete usable the old ICharFormatter.FormatChar() method (CORE-357)


1.0.0.2533
----------

Changed
- Build
 - Relevant project files now specify signing keys directly so VS builds will be signed in the same way that NAnt builds were previously, Silverlight builds
   are still not signed

1.0.0.2473
----------

Added
- Parsing
 - New ITokenisingParser interface which exposes a TokenQueueMode property (CORE-332)
- Global Options
 - New Options.DefaultTokenQueueMode controls default queue mode for tokeniser based parsers (CORE-332)
 - New Options.ValidateIris controls whether certain parsers perform strict IRI validation, currently only Turtle W3C syntax supports this (CORE-314)
- Configuration 
 - ConfigurationLoader may now be used in a convenience instance mode (CORE-337)
 - SparqlRemoteUpdateEndpoint now implements IConfigurationSerializable properly (CORE-346)
 - New dnr:queryEndpoint, dnr:queryEndpointUri, dnr:updateEndpoint and dnr:updateEndpointUri properties for use in place of their generic equivalents (CORE-346)
- Query
 - New optimization improves performance for some queries using ORDER BY + DISTINCT combinations (CORE-353)
- Storage
 - New ReadWriteSparqlConnector for connecting to arbitrary triple stores that expose both a Query and Update endpoint (CORE-346)

Changed
- Bug Fixes
 - Fix for one form of AllegroGraphConnector constructor confusing Store and Catalog IDs
 - StoreHandler did not propogate namespaces to all graphs (CORE-334)
 - SPARQL expression parsing could occassionally reject some numeric literals incorrectly (CORE-332)