@@ -341,13 +341,15 @@ namespace VDS.RDF.Storage
                     request = this.CreateRequest(this._repositoriesPrefix + this._store + this._queryPath, accept, "POST", queryParams);
 
                     //Build the Post Data and add to the Request Body
-                    request.ContentType = MimeTypesHelper.WWWFormURLEncoded;
+                    request.ContentType = MimeTypesHelper.Utf8WWWFormURLEncoded;
                     StringBuilder postData = new StringBuilder();
                     postData.Append("query=");
                     postData.Append(HttpUtility.UrlEncode(EscapeQuery(sparqlQuery)));
-                    StreamWriter writer = new StreamWriter(request.GetRequestStream());
-                    writer.Write(postData);
-                    writer.Close();
+                    using (StreamWriter writer = new StreamWriter(request.GetRequestStream(), new UTF8Encoding(Options.UseBomForUtf8)))
+                    {
+                        writer.Write(postData);
+                        writer.Close();
+                    }
                 }
 
                 Tools.HttpDebugRequest(request);
@@ -1039,7 +1041,7 @@ namespace VDS.RDF.Storage
                 request = this.CreateRequest(this._repositoriesPrefix + this._store + this._queryPath, accept, "POST", queryParams);
 
                 //Build the Post Data and add to the Request Body
-                request.ContentType = MimeTypesHelper.WWWFormURLEncoded;
+                request.ContentType = MimeTypesHelper.Utf8WWWFormURLEncoded;
 
                 Tools.HttpDebugRequest(request);
                 //POST the response which in async requires extra pain
@@ -1052,9 +1054,11 @@ namespace VDS.RDF.Storage
                             StringBuilder postData = new StringBuilder();
                             postData.Append("query=");
                             postData.Append(HttpUtility.UrlEncode(EscapeQuery(sparqlQuery)));
-                            StreamWriter writer = new StreamWriter(stream);
-                            writer.Write(postData);
-                            writer.Close();
+                            using (StreamWriter writer = new StreamWriter(stream, new UTF8Encoding(Options.UseBomForUtf8)))
+                            {
+                                writer.Write(postData);
+                                writer.Close();
+                            }
 
                             request.BeginGetResponse(r2 =>
                                 {
@@ -1417,11 +1421,11 @@ namespace VDS.RDF.Storage
                 request = this.CreateRequest(this._repositoriesPrefix + this._store + this._updatePath, MimeTypesHelper.Any, "POST", new Dictionary<String, String>());
 
                 //Build the Post Data and add to the Request Body
-                request.ContentType = MimeTypesHelper.WWWFormURLEncoded;
+                request.ContentType = MimeTypesHelper.Utf8WWWFormURLEncoded;
                 StringBuilder postData = new StringBuilder();
                 postData.Append("update=");
                 postData.Append(HttpUtility.UrlEncode(EscapeQuery(sparqlUpdate)));
-                using (StreamWriter writer = new StreamWriter(request.GetRequestStream()))
+                using (StreamWriter writer = new StreamWriter(request.GetRequestStream(), new UTF8Encoding(Options.UseBomForUtf8)))
                 {
                     writer.Write(postData);
                     writer.Close();
@@ -1461,7 +1465,7 @@ namespace VDS.RDF.Storage
                 request = this.CreateRequest(this._repositoriesPrefix + this._store + this._updatePath, MimeTypesHelper.Any, "POST", new Dictionary<String, String>());
 
                 //Build the Post Data and add to the Request Body
-                request.ContentType = MimeTypesHelper.WWWFormURLEncoded;
+                request.ContentType = MimeTypesHelper.Utf8WWWFormURLEncoded;
                 StringBuilder postData = new StringBuilder();
                 postData.Append("update=");
                 postData.Append(HttpUtility.UrlEncode(EscapeQuery(sparqlUpdate)));
@@ -1471,7 +1475,7 @@ namespace VDS.RDF.Storage
                         try
                         {
                             Stream stream = request.EndGetRequestStream(r);
-                            using (StreamWriter writer = new StreamWriter(stream))
+                            using (StreamWriter writer = new StreamWriter(stream, new UTF8Encoding(Options.UseBomForUtf8)))
                             {
                                 writer.Write(postData);
                                 writer.Close();
