@@ -368,13 +368,15 @@ namespace VDS.RDF.Storage
                     request = this.CreateRequest(this._kb + tID + "/query", accept, "POST", queryParams);
 
                     //Build the Post Data and add to the Request Body
-                    request.ContentType = MimeTypesHelper.WWWFormURLEncoded;
+                    request.ContentType = MimeTypesHelper.Utf8WWWFormURLEncoded;
                     StringBuilder postData = new StringBuilder();
                     postData.Append("query=");
                     postData.Append(HttpUtility.UrlEncode(sparqlQuery));
-                    StreamWriter writer = new StreamWriter(request.GetRequestStream());
-                    writer.Write(postData);
-                    writer.Close();
+                    using (StreamWriter writer = new StreamWriter(request.GetRequestStream(), new UTF8Encoding()))
+                    {
+                        writer.Write(postData);
+                        writer.Close();
+                    }
                 }
 
                 Tools.HttpDebugRequest(request);
@@ -1574,14 +1576,14 @@ namespace VDS.RDF.Storage
                 request = this.CreateRequest(this._kb + tID + "/query", accept, "POST", queryParams);
 
                 //Build the Post Data and add to the Request Body
-                request.ContentType = MimeTypesHelper.WWWFormURLEncoded;
+                request.ContentType = MimeTypesHelper.Utf8WWWFormURLEncoded;
 
                 request.BeginGetRequestStream(r =>
                     {
                         try
                         {
                             Stream stream = request.EndGetRequestStream(r);
-                            using (StreamWriter writer = new StreamWriter(stream))
+                            using (StreamWriter writer = new StreamWriter(stream, new UTF8Encoding(Options.UseBomForUtf8)))
                             {
                                 writer.Write("query=");
                                 writer.Write(HttpUtility.UrlEncode(query));
